samples/_failures_safe/1761400353_bc8c8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9e5025b.c: In function ‘main’:
./samples/SAFE/__tmp_c9e5025b.c:139:5: error: expected declaration or statement at end of input
  139 |     for (size_t i = 0; i < sizeof(test_data); i++) {
      |     ^~~
./samples/SAFE/__tmp_c9e5025b.c:139:5: error: expected declaration or statement at end of input
